--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 title = "Website Name"
 baseURL = "/"
-disqusShortname = 'osis.ibaska'
+disqusShortname = 'osia'
 copyright = 'This work is licensed under a Creative Commons Attribution-ShareAlike 4.0 International License.'
 languageCode = 'id'
 disableKinds = ["taxonomy", "term"]
